<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:key="username" android:title="@string/titleUsername" android:summary="@string/summaryUserName" android:defaultValue="student"/>
    <EditTextPreference android:password="true" android:key="password" android:title="@string/titlePassword" android:summary="@string/summaryPassword" android:defaultValue="password"/>
    <EditTextPreference android:key="apiRoot" android:title="@string/titleApiRoot" android:summary="@string/summaryApiRoot" android:defaultValue="http://yamba.marakana.com/api"/>
	<ListPreference android:title="@string/titleProvider"
					android:summary="@string/summaryProvider"
					android:key="provider"
	    			android:entryValues="@array/providerValues"
	    			android:entries="@array/providers"
	/>
    <ListPreference android:entryValues="@array/intervalValues"
        			android:summary="@string/summaryUpdaterInterval"
        			android:title="@string/titleUpdaterInterval"
        			android:entries="@array/interval" 
        			android:key="interval">
    </ListPreference>"
</PreferenceScreen>
